tests/diagnostics/expressions/method_calls/unknown_method/expect.txt
# exit: 1
input/main.lang0:7:17: error: unknown method 'User.missing'
      return user.missing()
                  ^
